--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-custom-scrollbars": "^4.2.1",
-        "react-responsive-carousel": "^3.2.23",
         "@fullpage/react-fullpage": "^0.1.31",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -31,9 +29,12 @@
         "jquery": "^3.6.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.6.0",
+        "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^18.2.0",
+        "react-image-gallery": "^1.2.11",
+        "react-responsive-carousel": "^3.2.23",
         "react-router-dom": "^6.4.4",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
         "slick": "^1.12.2",
         "slick-carousel": "^1.8.1",
