--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.10.2",
         "jquery": "^3.6.1",
+        "js-cookie": "^3.0.1",
         "react": "^18.2.0",
         "react-bootstrap": "^2.6.0",
         "react-custom-scrollbars": "^4.2.1",
@@ -36,6 +37,7 @@
         "react-router-dom": "^6.4.4",
         "react-scripts": "^2.1.3",
         "react-slick": "^0.29.0",
+        "react-spring": "^9.6.1",
         "slick": "^1.12.2",
         "slick-carousel": "^1.8.1",
         "web-vitals": "^2.1.4"
